# cdproject

./: .gitignore  CMakeLists.txt  Cable.cpp  Cable.h  CombinedComp.cpp  CombinedComp.h  Config.h  Cost.cpp  Cost.h  Evaluation.cpp  Evaluation.h  FileHandler.cpp  FileHandler.h  GUIApplication.cpp  GUIApplication.h  GraphHandler.cpp  GraphHandler.h  ImageHandler.cpp  ImageHandler.h  MergedComp.cpp  MergedComp.h  Patch.cpp  Patch.h  README.md  RotatedRectm.cpp  RotatedRectm.h  main.cpp
input/: parameters.txt
